--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
 <!doctype html>
-<!--
-
-  Instructions:
-
-  - Save this file.
-  - Replace "USER" with your GitHub username.
-  - Replace "REPO" with your GitHub repo name.
-  - Replace "Your Project" with your project name.
-  - Upload this file (or commit to GitHub Pages).
-
-  Customize as you see fit!
-
--->
 <html>
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Your Project</title>
+  <title>Open FRESH! Developers Potal</title>
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -30,21 +17,35 @@
   <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js'></script>
 
   <!-- Meta -->
-  <meta content="Your Project" property="og:title">
-  <meta content="Your Project description goes here." name="description">
+  <meta content="Open FRESH! Developers Potal" property="og:site_name">
+  <meta content="Open FRESH! Developers Potal" property="og:title">
+  <meta content="website" property="og:type">
+  <meta content="Open FRESH! is official developer platform for FRESH! " name="description">
+  <meta content="Open FRESH! is official developer platform for FRESH! " property="og:description">
+  <meta content="https://freshlive.tv/assets/1484741203/img/page/ChannelRequest/og_image_channelrequest.png" property="og:image">
 
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('openfresh/openfresh.github.io')
+      fetcher: Flatdoc.file('Readme.md')
     });
   </script>
 </head>
-<body role='flatdoc'>
+<body role='flatdoc' class='big-h3 large-brief'>
+
+  <div class='title-area title-card' style='background-image: url('https://freshlive.tv/assets/1484741203/img/page/ChannelRequest/og_image_channelrequest.png')'>
+    <div class='in'>
+      <div class='headline'>
+        <h1>Documentation is easy.</h1>
+        <p>Flatdoc is the fastest way to create a site for your open source project.</p>
+        <h5><span>Flatdoc</span></h5>
+      </div>
+    </div>
+  </div>
 
   <div class='header'>
     <div class='left'>
-      <h1>Your Project</h1>
+      <h1>Open FRESH! Developers Potal</h1>
       <ul>
         <li><a href='https://github.com/openfresh/openfresh.github.io'>View on GitHub</a></li>
         <li><a href='https://github.com/openfresh/openfresh.github.io/issues'>Issues</a></li>
