--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.file('Readme.md')
+      fetcher: Flatdoc.file('README.md')
     });
   </script>
 </head>
